--- a/addSource.html
+++ b/addSource.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
   <title>轻舟源编辑器</title>
-  <link rel="stylesheet" href="./layui/css/layui.css">
+  <link rel="stylesheet" href="../layui/css/layui.css">
 </head>
 <body>
   
